--- a/ducky/src/App.css
+++ b/ducky/src/App.css
@@ -1,12 +1,9 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 5s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -30,4 +27,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.Flex-App-Container {
+  display: flex;
+}
+
+.flex-container{
+  display: flex;
+  flex : auto;
 }
