--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -1,14 +1,137 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  	margin: 0;
+  	padding: 0;
+  	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    	"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    	sans-serif;
+  	-webkit-font-smoothing: antialiased;
+  	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.img-logo {
+  	width: 2%;
+}
+
+.sign-page-root {
+	display: flex;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	height: max-content;
+	background-color: beige;
+}
+
+.sign {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	padding: 3% 7% 3% 7%;
+	margin: 10% 20% 10% 20%;
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
+}
+
+.sign-top {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.sign-logo {
+	width: 50px;
+	display: block;
+}
+
+.sign-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: left;
+}
+
+.sign-content h3 {
+	font-size: 18px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.form-sign-input-text {
+	height: 100%;
+	width: 100%;
+	border: 1px solid lightgray;
+	border-radius: 7px;
+	font-size: 16px;
+	padding: 10px 20px 10px 20px;
+	outline: none;
+	background: none;
+	background-color: white;
+}
+
+.form-sign-input-label {
+	color: black;
+	font-size: 16px;
+	margin: 10px 0 10px 0;
+}
+
+.sign-up-navigation-bar {
+	margin-top: 20px;
+	display: flex;
+	flex-direction: row;
+	align-content: center;
+}
+
+.sign-up-navigation-bar input {
+	margin-left: 10px;
+}
+
+.sign-type-swipe-question {
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-items: center;
+}
+
+.form-sign-button {
+	padding: 10px 20px 10px 20px;
+	border-radius: 4px;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.positive {
+	background-color: black;
+	color: white;
+	border: none;
+}
+
+.negative {
+	background-color: white;
+	color: black;
+	border: 1px solid black;
+}
+
+.select-label {
+	font-size: 14px;
+	padding: 10px 10px 10px 10px;
+}
+
+.select-item {
+	font-size: 14px;
+	padding: 8px 16px 8px 16px;
+}
+
+.sign-error-message {
+	font-size: 14px;
+	color: brown;
+	background-color: pink;
+	padding: 2px 3px 2px 3px;
+	border-radius: 2px;
+}
+
