--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -8,9 +8,7 @@ body {
   	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
+/* SIGN */
 
 .img-logo {
   	width: 2%;
@@ -135,3 +133,170 @@ code {
 	border-radius: 2px;
 }
 
+
+/* POST */
+
+.post-edit-container {
+	width: 95%;
+}
+
+.post-edit-text-container {
+
+}
+
+.post-edit-text {
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	width: 100%;
+	height: 100%;
+	resize: none;
+	border: none;
+}
+
+.post-edit-actions-bar {
+	display: flex;
+	flex-direction: row;
+	border-top: solid 1px lightgray;
+}
+
+.post-edit-actions-icons {
+	display: flex;
+	flex-direction: row;
+	margin-right: 30%;
+}
+
+.post-edit-action-icon {
+	display: inline;
+	margin: 2px 5px 2px 5px;
+}
+
+.post-edit-action-icon-iamge {
+	width: 20px;
+}
+
+.post-edit-actions-text {
+
+}
+
+.post-edit-action-text {
+
+}
+
+.post-edit-action-text-button {
+	padding: 10px 20px 10px 20px;
+	border-radius: 4px;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+	background-color: black;
+	color: white;
+	border: none;
+}
+
+
+/* FEED */
+
+.feed-navigation {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	width: 20vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	border-right: solid 1px lightgray;
+	padding: 1% 2% 1% 2%;
+	background-color: rgba(240, 240, 240, 0.5);
+}
+
+.feed-navigation-logo {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.feed-navigation-logo img {
+	width: 60px;
+	height: 60px;
+}
+
+.feed-navigation-search-bar-input {
+	border-radius: 3px;
+	font-size: 16px;
+	outline: none;
+	padding: 10px 10px 10px 10px;
+	width: 100%;
+	color: black;
+	border: solid 1px lightgray;
+}
+
+.feed-navigation-menu-item {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 10px 10px 10px 10px;
+}
+
+.feed-navigation-menu-item-image {
+	width: 30px;
+}
+
+.feed-navigation-menu-item-titles {
+	display: flex;
+	flex-direction: column;
+	margin-left: 4px;
+}
+
+.feed-navigation-menu-item-title {
+	margin: 0;
+}
+
+.feed-navigation-menu-item-subtitle {
+	margin: 0;
+	font-weight: normal;
+}
+
+.feed-content {
+	position: relative;
+	left: 25vw;
+}
+
+.feed-content-item {
+	display: flex;
+	flex-direction: row;
+}
+
+.feed-content-item-left {
+	display: flex;
+	flex-direction: column;
+	border-right: solid 1px lightgray;
+	height: 100vh;
+	width: 50vw;
+}
+
+.feed-content-item-left-top {
+
+}
+
+.feed-content-item-right {
+
+}
+
+.feed-content-storie-preview-list-container {
+	border: solid 1px lightgray;
+	margin: 2px 2px 2px 2px;
+}
+
+/* STORIES */
+
+
+
+.storie-preview-container {
+	width: 10vw;
+	height: 15vw;
+	border: solid 1px lightgray;
+	border-radius: 2px;
+}
