--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -232,7 +232,99 @@ body {
 }
 
 
-/* FEED */
+.feed-more-menu {
+	display: none;
+	position: fixed;
+	z-index: 9;
+	top: 9vh;
+	right: 10vw;
+	font-size: 14px;
+	border-radius: 8px;
+	min-width: 200px;
+	box-shadow: 0 10px 25px rgba(80, 80, 80, .2);
+	background-color: white;
+}
+
+.feed-more-menu-container:hover .feed-more-menu {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.feed-more-menu-item {
+	border: none;
+	border-bottom: 1px solid lightgray;
+	width: 100%;
+	padding: 10px 10px 10px 10px;
+	text-align: center;
+	text-decoration: none;
+	color: black;
+	background-color: rgba(255, 255, 255, 1);
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.feed-more-menu-item:hover {
+	box-shadow: 0 10px 25px rgba(80, 80, 80, .2);
+	background-color: rgba(248, 248, 248, 1);
+	border-radius: 8px;
+}
+
+.feed-more-menu-item-image {
+	width: 20px;
+	height: 20px;
+	margin-right: 5px;
+}
+
+
+.feed-notifications-container:hover 
+.notification-list-view-container {
+	display: flex;
+	flex-direction: column;
+}
+
+.notification-list-view-container {
+	display: none;
+	position: fixed;
+	z-index: 9;
+	top: 9vh;
+	right: 15vw;
+	min-width: 30vw;
+	background-color: rgba(255, 255, 255, 1);
+	box-shadow: 0 10px 25px rgba(80, 80, 80, .2);
+	border-radius: 8px;
+}
+
+.notification-list-view-header {
+	border-bottom: 1px solid lightgray;
+	width: 100%;
+}
+
+.notification-list-view-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 60vh;
+	overflow-y: auto;
+	overflow-x: hidden;
+	font-size: 14px;
+}
+
+.notification-view-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 10px 10px 10px 10px;
+	border-bottom: 1px solid lightgray;
+}
+
+.notification-view-image {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+}
+
 
 .feed-navigation {
 	position: fixed;
@@ -388,7 +480,7 @@ body {
 	margin-bottom: 20px;
 }
 
-/* STORIES */
+
 
 .storie-preview-list-container {
 	
@@ -432,7 +524,7 @@ body {
 	font-weight: bold;
 }
 
-/* POSTS */
+
 
 .post-view-container {
 	margin: 4px 2px 4px 2px;
@@ -552,7 +644,6 @@ body {
 
 }
 
-/* MESSAGES */
 
 .feed-content-messages {
 
